objects/CommandCenter__Deployment__c.object
<CustomObject>
    <fields>
        <fullName>CommandCenter__Aborted_Count__c</fullName>
        <label>Aborted Count</label>
        <summaryFilterItems>
            <field>CommandCenter__Deployment_Stage__c.CommandCenter__Status__c</field>
            <operation>equals</operation>
            <value>Aborted</value>
        </summaryFilterItems>
        <summaryForeignKey>CommandCenter__Deployment_Stage__c.CommandCenter__Deployment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Action_Type__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Validate</fullName>
                </value>
                <value>
                    <fullName>Deploy</fullName>
                </value>
                <value>
                    <fullName>QuickDeploy</fullName>
                </value>
                <value>
                    <fullName>Validate_RunAllTests</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommandCenter__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Sent</fullName>
                    <default>true</default>
                    <label>Not Sent</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommandCenter__Approved_Date_Time__c</fullName>
        <label>Approved Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Branch_Name__c</fullName>
        <inlineHelpText>Source branch name from which code is deployed to target environment</inlineHelpText>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Build_Number__c</fullName>
        <label>Build Number</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Completion_Time__c</fullName>
        <label>Completion Time</label>
        <summarizedField>CommandCenter__Deployment_Stage__c.CommandCenter__Completion_Time__c</summarizedField>
        <summaryFilterItems>
            <field>CommandCenter__Deployment_Stage__c.CommandCenter__Status__c</field>
            <operation>equals</operation>
            <value>Success, Failure, Aborted</value>
        </summaryFilterItems>
        <summaryForeignKey>CommandCenter__Deployment_Stage__c.CommandCenter__Deployment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Deployment_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicate that whether approval is required for deployment from client or not.</description>
        <label>Deployment Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Deployment_Comment__c</fullName>
        <label>Deployment Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Failure_Count__c</fullName>
        <label>Failure Count</label>
        <summaryFilterItems>
            <field>CommandCenter__Deployment_Stage__c.CommandCenter__Status__c</field>
            <operation>equals</operation>
            <value>Failure</value>
        </summaryFilterItems>
        <summaryForeignKey>CommandCenter__Deployment_Stage__c.CommandCenter__Deployment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CommandCenter__In_Progress_Count__c</fullName>
        <label>In Progress Count</label>
        <summaryFilterItems>
            <field>CommandCenter__Deployment_Stage__c.CommandCenter__Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </summaryFilterItems>
        <summaryForeignKey>CommandCenter__Deployment_Stage__c.CommandCenter__Deployment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CommandCenter__JobWithStatus__c</fullName>
        <formula>CommandCenter__RM_Configuration__r.CommandCenter__Job_Name__c+&apos; - &apos;+ CommandCenter__Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job With Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Job_Name__c</fullName>
        <label>Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Last_Deployment_Stage_Date__c</fullName>
        <label>Last Deployment Stage Date</label>
        <summarizedField>CommandCenter__Deployment_Stage__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>CommandCenter__Deployment_Stage__c.CommandCenter__Deployment__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Pipeline_Owner__c</fullName>
        <label>Pipeline Owner</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Project_Name__c</fullName>
        <label>Project Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__RM_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RM Configuration</label>
        <referenceTo>CommandCenter__RM_Configuration__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommandCenter__RecentValidationId__c</fullName>
        <label>Recent Validation Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Release_checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specify to which release checklist this deployment is associated</description>
        <inlineHelpText>Specify to which release checklist this deployment is associated</inlineHelpText>
        <label>Release checklist</label>
        <referenceTo>CommandCenter__Release_checklist__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Run_Specified_Test_Class__c</fullName>
        <label>Run Specified Test Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Source_Org__c</fullName>
        <label>Source Org</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Standalone_Job_Success_Count__c</fullName>
        <label>Standalone Job - Success Count</label>
        <summaryFilterItems>
            <field>CommandCenter__Deployment_Stage__c.CommandCenter__Is_Standalone_Job__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CommandCenter__Deployment_Stage__c.CommandCenter__Status__c</field>
            <operation>equals</operation>
            <value>Success</value>
        </summaryFilterItems>
        <summaryForeignKey>CommandCenter__Deployment_Stage__c.CommandCenter__Deployment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Status__c</fullName>
        <formula>IF( CommandCenter__In_Progress_Count__c &gt; 0, &apos;In Progress&apos;,
	IF( CommandCenter__Aborted_Count__c &gt; 0, &apos;Aborted&apos;,
	IF( CommandCenter__Success_Count__c &gt; 0, &apos;Success&apos;,
	IF( CommandCenter__Standalone_Job_Success_Count__c &gt; 0, &apos;Job Success&apos;,
	IF( CommandCenter__Success_Count_Quick_Deploy__c &gt; 0, &apos;Success&apos;,
	IF( CommandCenter__Failure_Count__c &gt; 0 , &apos;Failed&apos;,
	IF( ISPICKVAL(CommandCenter__Approval_Status__c, &apos;Pending&apos;), &apos;Pending for Approval&apos;,
	IF((ISPICKVAL(CommandCenter__Approval_Status__c, &apos;Approved&apos;) &amp;&amp; NOT(CommandCenter__Success_Count__c &gt; 0)), &apos;Ready to Deploy&apos;,
	IF(ISPICKVAL(CommandCenter__Approval_Status__c, &apos;Rejected&apos;), &apos;Approval Rejected&apos;,
	&apos;Pending&apos; )
	)
	)
	)
	)
	)
	)
	)

)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Success_Count_Quick_Deploy__c</fullName>
        <label>Success Count Quick Deploy</label>
        <summaryFilterItems>
            <field>CommandCenter__Deployment_Stage__c.CommandCenter__Is_Deploy_Job__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CommandCenter__Deployment_Stage__c.CommandCenter__Status__c</field>
            <operation>equals</operation>
            <value>Success</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CommandCenter__Deployment_Stage__c.CommandCenter__Stage_Label__c</field>
            <operation>contains</operation>
            <value>Deploy</value>
        </summaryFilterItems>
        <summaryForeignKey>CommandCenter__Deployment_Stage__c.CommandCenter__Deployment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Success_Count__c</fullName>
        <label>Success Count</label>
        <summaryFilterItems>
            <field>CommandCenter__Deployment_Stage__c.CommandCenter__Status__c</field>
            <operation>equals</operation>
            <value>Success</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CommandCenter__Deployment_Stage__c.CommandCenter__Stage_Label__c</field>
            <operation>equals</operation>
            <value>Deployment</value>
        </summaryFilterItems>
        <summaryForeignKey>CommandCenter__Deployment_Stage__c.CommandCenter__Deployment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Target_Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF Environment</label>
        <referenceTo>CommandCenter__SF_Environment__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Target_Org__c</fullName>
        <inlineHelpText>Target org name to which components to be deployed</inlineHelpText>
        <label>Target Org</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Test_Level__c</fullName>
        <label>Test Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NoTestRun</fullName>
                </value>
                <value>
                    <fullName>RunSpecifiedTests</fullName>
                </value>
                <value>
                    <fullName>RunLocalTests</fullName>
                </value>
                <value>
                    <fullName>RunAllTestsInOrg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommandCenter__Time_to_Complete__c</fullName>
        <label>Time to Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Total_Stages__c</fullName>
        <label>Total Stages</label>
        <summaryForeignKey>CommandCenter__Deployment_Stage__c.CommandCenter__Deployment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Total_Time__c</fullName>
        <formula>TEXT(FLOOR(MOD((CommandCenter__Completion_Time__c/ 3600000),24))) &amp; &quot;:&quot; &amp;

TEXT(FLOOR(MOD((CommandCenter__Completion_Time__c / 60000),60))) &amp; &quot;:&quot; &amp;

TEXT(FLOOR(MOD((CommandCenter__Completion_Time__c / 1000),60)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__User_Name__c</fullName>
        <inlineHelpText>Target environment user name to which deployment triiggered</inlineHelpText>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Deployment</label>
    <listViews>
        <fullName>CommandCenter__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deployment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>